development/nextcloud/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-app-service
  namespace: nextcloud
  labels:
    target: frontend
spec:
  ports:
  - port: 80
  selector:
    app: nextcloud-app
