development/nextcloud/app/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  labels:
    name: nextcloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nextcloud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-service
                port:
                  number: 80
